--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
     "jquery": "^2.2.1",
     "underscore": "^1.8.3",
     "font-awesome": "fontawesome#^4.5.0",
-    "moment": "^2.11.2"
+    "moment": "^2.11.2",
+    "annyang": "^2.2.1"
   }
 }
